# Spatial-LLM

./: .gitignore  CHANGELOG.md  FABLE5_BUILD_PROMPT.md  GAPS.md  MODEL_CARD.md  README.md  REPRODUCE.md  ablation_leave_one_out.json  ablation_leave_one_out_aux.json  ablation_trajectory_add_one_in.json  ablation_trajectory_leave_one_out.json  ablation_trajectory_leave_one_out_aux.json  ablation_trajectory_memrecall_capacity.json  ablation_trajectory_memrecall_leave_one_out.json  ablation_trajectory_pathint_gates.json  ablation_trajectory_recall_add_one_in.json  ablation_trajectory_recall_gates.json  ablation_trajectory_recall_leave_one_out.json  experiment_results.json  experiment_results_v2.json  experiments_city_classification.py  experiments_v2.py  generate_data.py  modal_app.py  notebook5f45b76fb1.ipynb  pyproject.toml  reproduce_all.sh  requirements.txt  spatial_llm_kaggle.ipynb  train.py
configs/: coord_2d.yaml  coord_2d_noleak.yaml  coord_3d.yaml  coord_3d_noleak.yaml  coord_3d_permod.yaml  coord_3d_permod_noleak.yaml  default.yaml  neuro_off.yaml  neuro_on.yaml  real_data.yaml  train_config.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: explore_data.ipynb  m2_extrapolation_multiseed_kaggle.py  m2_grid_cortex_all_tasks_kaggle.py  m2_harder_tasks_kaggle.py  m2_length_generalization_kaggle.py  m2_relational_llm_kaggle.py  m2_torus_qa_kaggle.py  m3_emergent_time_kaggle.py  m3_temporal_full_kaggle.py  m4_what_when_kaggle.py  m4b_separate_readout_kaggle.py  m5_deadreckoning_llm_kaggle.py  m6_multiframe_llm_kaggle.py  m7_theta_sweep_llm_kaggle.py  (+5 more)
(+360 files in other folders)
