[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spatial-llm"
version = "0.1.0"
description = "Neuroscience-inspired Spatial Language Model with grid cells, place cells, and predictive coding"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Mohammadzamanid"}
]
keywords = ["llm", "spatial", "geospatial", "neuroscience", "grid-cells", "place-cells"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "transformers>=4.40.0",
  "peft>=0.10.0",
  "accelerate>=0.28.0",
  "datasets>=2.18.0",
  "geopandas>=0.14.0",
  "rasterio>=1.3.0",
  "shapely>=2.0.0",
  "mercantile>=1.2.1",
  "wandb>=0.16.0",
  "pyyaml>=6.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "Pillow>=10.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
